// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pre should hidden copy button correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should hidden line number correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="placeholder"
        />
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render code title correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="Code Title"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 1`] = `
<div>
  <pre
    class="language-html pre dark:shadow-xl dark:shadow-primary"
    data-language="HTML"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-html code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 2`] = `
<div>
  <pre
    class="language-xml pre dark:shadow-xl dark:shadow-primary"
    data-language="XML"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-xml code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 3`] = `
<div>
  <pre
    class="language-yml pre dark:shadow-xl dark:shadow-primary"
    data-language="YAML"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-yml code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 4`] = `
<div>
  <pre
    class="language-yaml pre dark:shadow-xl dark:shadow-primary"
    data-language="YAML"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-yaml code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 5`] = `
<div>
  <pre
    class="language-css pre dark:shadow-xl dark:shadow-primary"
    data-language="CSS"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-css code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = 
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 6`] = `
<div>
  <pre
    class="language-json pre dark:shadow-xl dark:shadow-primary"
    data-language="JSON"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-json code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 7`] = `
<div>
  <pre
    class="language-md pre dark:shadow-xl dark:shadow-primary"
    data-language="Markdown"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-md code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 8`] = `
<div>
  <pre
    class="language-markdown pre dark:shadow-xl dark:shadow-primary"
    data-language="Markdown"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-markdown code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 9`] = `
<div>
  <pre
    class="language-js pre dark:shadow-xl dark:shadow-primary"
    data-language="JavaScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-js code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 10`] = `
<div>
  <pre
    class="language-javascript pre dark:shadow-xl dark:shadow-primary"
    data-language="JavaScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-javascript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 11`] = `
<div>
  <pre
    class="language-ts pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-ts code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 12`] = `
<div>
  <pre
    class="language-typescript pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 13`] = `
<div>
  <pre
    class="language-coffee pre dark:shadow-xl dark:shadow-primary"
    data-language="CoffeeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-coffee code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 14`] = `
<div>
  <pre
    class="language-coffeescript pre dark:shadow-xl dark:shadow-primary"
    data-language="CoffeeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-coffeescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 15`] = `
<div>
  <pre
    class="language-jsx pre dark:shadow-xl dark:shadow-primary"
    data-language="React"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-jsx code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 16`] = `
<div>
  <pre
    class="language-tsx pre dark:shadow-xl dark:shadow-primary"
    data-language="React"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-tsx code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 17`] = `
<div>
  <pre
    class="language-objc pre dark:shadow-xl dark:shadow-primary"
    data-language="Objective-C"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-objc code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 18`] = `
<div>
  <pre
    class="language-objectivec pre dark:shadow-xl dark:shadow-primary"
    data-language="Objective-C"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-objectivec code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 19`] = `
<div>
  <pre
    class="language-vue pre dark:shadow-xl dark:shadow-primary"
    data-language="Vue"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-vue code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 20`] = `
<div>
  <pre
    class="language-go pre dark:shadow-xl dark:shadow-primary"
    data-language="Go"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-go code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 21`] = `
<div>
  <pre
    class="language-java pre dark:shadow-xl dark:shadow-primary"
    data-language="Java"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-java code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render different language correctly (snapshot) 22`] = `
<div>
  <pre
    class="language-rust pre dark:shadow-xl dark:shadow-primary"
    data-language="Rust"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-rust code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
        >
          const foo = bar();
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render empty children correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token plain"
          style="display: inline-block;"
        >
          

        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render empty className correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line hover"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;

exports[`Pre should render highlight lines correctly (snapshot) 1`] = `
<div>
  <pre
    class="pre dark:shadow-xl dark:shadow-primary"
    data-language="TypeScript"
  >
    <button
      aria-label="CopyButton"
      class="outline-focus-visible absolute right-5 top-1.5 md:top-1"
      title="Copy"
      type="button"
    >
      <div
        class="wrapper"
        data-testid="toggle-wrapper"
        tabindex="-1"
      >
        <span
          aria-current="true"
          class="span"
          style="opacity: 1; will-change: transform,opacity; transform: none;"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
    <pre
      class="prism-code language-typescript code"
      style="color: rgb(118, 217, 230); background-color: rgb(42, 42, 42);"
    >
      <div
        class="token-line highlight"
        style="color: rgb(118, 217, 230);"
      >
        <span
          class="number"
        >
          1
        </span>
        <span
          class="token keyword"
          style="color: rgb(249, 38, 114);"
        >
          const
        </span>
        <span
          class="token plain"
        >
           foo 
        </span>
        <span
          class="token operator"
          style="color: rgb(167, 122, 254);"
        >
          =
        </span>
        <span
          class="token plain"
        >
           
        </span>
        <span
          class="token function"
          style="color: rgb(166, 226, 45);"
        >
          bar
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          (
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          )
        </span>
        <span
          class="token punctuation"
          style="color: rgb(248, 248, 242);"
        >
          ;
        </span>
      </div>
    </pre>
  </pre>
</div>
`;
